unpackaged/main/default/objects/SDO_SCOM_OOA_Approved_Domain__c/SDO_SCOM_OOA_Approved_Domain__c.object-meta.xml
<CustomObject>
    <label>Approved Domain</label>
    <nameField>
        <label>Approved Domain Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approved Domains</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>