unpackaged/main/default/objects/SDO_SCOM_OOA_Approved_Domain__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Approved Domains</relationshipLabel>
    <relationshipName>Approved_Domains</relationshipName>
    <type>Lookup</type>
</CustomField>