unpackaged/main/default/objects/SDO_SCOM_OOA_Approved_Domain__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <label>Company Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>