unpackaged/main/default/objects/SDO_SCOM_OOA_Approved_Domain__c/fields/Domains__c.field-meta.xml
<CustomField>
    <fullName>Domains__c</fullName>
    <label>Domains</label>
    <length>255</length>
    <type>Text</type>
</CustomField>